get actual list for list view and add state to paginate component and make tripwidget components dynamic except theme

--- a/src/components/hotel-deal-widget/hotel-deal-widget.html
+++ b/src/components/hotel-deal-widget/hotel-deal-widget.html
@@ -17,7 +17,7 @@
         </div>
         <div class="widget-hotel-content">
             <h2>فندق خليج نعمة شرم الشيخ
-                <div class="starts starts-four"><i></i><i></i><i></i><i></i><i></i></div>
+                <div class="starts starts-4"><i></i><i></i><i></i><i></i><i></i></div>
             </h2>
             <p class="premium-icon">عرض من شركة توريكو للسياحة</p>
             <span class="hotel-label green-label">مناسب للأطفال والعائلة</span>
