--- a/public/img/filter/filter.css
+++ b/public/img/filter/filter.css
@@ -145,10 +145,10 @@
     margin-left: 3px;
 }
 
-.starts.starts-one i:nth-child(1)~i,
-.starts.starts-two i:nth-child(2)~i,
-.starts.starts-three i:nth-child(3)~i,
-.starts.starts-four i:nth-child(4)~i {
+.starts.starts-1 i:nth-child(1)~i,
+.starts.starts-2 i:nth-child(2)~i,
+.starts.starts-3 i:nth-child(3)~i,
+.starts.starts-4 i:nth-child(4)~i {
     background-image: url(../img/icons/star-empty.png);
 }
 
