--- a/src/css/base.css
+++ b/src/css/base.css
@@ -67,14 +67,14 @@ span { font-family: 'Cairo', sans-serif; }
 .hotel-label.red-label { background: #ED145B; } 
 
 /*Quick View*/
-.quick-view { position: absolute; background-color:rgba(0, 0, 0, 0.88); top: 0; right: 0; left: 0; z-index: 1; } 
+.quick-view { position: fixed; background-color: rgba(0, 0, 0, 0.88); top: 0; right: 0; left: 0; bottom: 0; z-index: 1; overflow-x: hidden; overflow-y: auto; } 
 .quick-view .quick-view-items { margin: 55px auto 60px; max-width: 1200px; position: relative; } 
 .quick-view .quick-view-items > .item { background-color: #F4F4F4; padding: 35px 40px; max-width: 980px; margin: 0 auto; border-radius: 8px; } 
 .quick-view .head { } 
-.quick-view .arrow-switcher {background-color:rgba(0, 0, 0, 0.2);background-image: url('/img/icons/arrow-right-white.png');background-position: center;border-radius: 4px; width: 80px; position: absolute; height: 335px; top: 115px;background-repeat: no-repeat;background-size: 14px;transition: all .2s;} 
-.quick-view .arrow-switcher:hover{background-color:rgba(0, 0, 0, 0.8);}
+.quick-view .arrow-switcher { background-color:rgba(0, 0, 0, 0.2); background-image: url('/img/icons/arrow-right-white.png'); background-position: center; border-radius: 4px; width: 80px; position: absolute; height: 335px; top: 115px; background-repeat: no-repeat; background-size: 14px; transition: all .2s; } 
+.quick-view .arrow-switcher:hover { background-color:rgba(0, 0, 0, 0.8); } 
 .quick-view .arrow-switcher.left { left: 0; } 
-.quick-view .arrow-switcher.right {transform: rotate(180deg); right: 0; } 
+.quick-view .arrow-switcher.right { transform: rotate(180deg); right: 0; } 
 .quick-view .close { height: 16px; width: 16px; position: relative; position: absolute; top: 24px; right: 24px; cursor: pointer } 
 .quick-view .close::before { content:''; position: absolute; top: 0; left: 0; width: 100%; height: 2px; background: #fff; transform: rotate(135deg); } 
 .quick-view .close::after { content: ''; position: absolute; top: 0; left: 0; width: 100%; height: 2px; background: #fff; transform: rotate(-135deg); } 
