--- a/src/components/hotel-deal-widget/hotel-deal-widget.css
+++ b/src/components/hotel-deal-widget/hotel-deal-widget.css
@@ -12,7 +12,7 @@
 .travel-package .price h3 span { font-size: 10px; font-weight: 400; vertical-align: middle; display: inline-block; } 
 .visibility-watch { font-size: 10px; color: #798694; text-align: left; padding: 10px 20px; line-height: 22px; border-top: 1px solid #E5EBF1; position: absolute; top: 100%; left: 0; right: 0; background-color: #fff; box-shadow: 0px 2px 4px 0 rgba(0, 0, 0, 0.25); -webkit-transition: all .2s; -moz-transition: all .2s; -o-transition: all .2s; transition: all .2s; border-radius: 0 0 4px 4px; opacity: 0; visibility: hidden; } 
 .visibility-watch img { width: 17px; vertical-align: middle; } 
-.visibility-watch .num { font-size: 11px; vertical-align: middle; } 
+.visibility-watch .num { font-size: 11px; vertical-align: middle;margin: 0 5px;} 
 .default-widget:hover .visibility-watch { opacity: 1; visibility: visible; } 
 .default-widget:hover .widget-hotel-foot { border-radius: 0; } 
 .default-widget:hover { box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.25); border-radius: 4px 4px 0 0; } 
@@ -46,3 +46,21 @@
 .default-widget.waiting .hotel-label,
 .default-widget.waiting .travel-included,
 .default-widget.waiting .visibility-watch { opacity: 0; visibility: visible; pointer-events: none; } 
+
+.HomePage .container .list-view.rows-01 .col{max-width: 100%;flex-basis: 100%;height: 255px;}
+.list-view.rows-01 .default-widget .pic{width: 340px;padding-top: 0;height: 100%;border-radius: 0 4px 4px 0;}
+.list-view.rows-01 .default-widget{display: flex;height: 100%;background: #FFFFFF;box-shadow: 0 1px 4px 0 rgba(0,0,0,0.25);border-radius: 4px;}
+.list-view.rows-01 .widget-hotel-foot{margin-right: auto;border-top: none;border-right: 1px solid #E5EBF1;padding: 0 20px;margin-top: 15px;margin-bottom: 15px;}
+.list-view.rows-01 .widget-hotel-foot .fav-btn{margin-right: 60px;}
+.list-view.rows-01 .default-widget > div:nth-child(2){display: flex;flex: 1;}
+
+.list-view.rows-02 .default-widget > div:nth-child(2){display: flex;flex: 1;flex-direction: column;}
+.HomePage .container .list-view.rows-02 .col{max-width: 100%;flex-basis: 100%;height: 255px;}
+.list-view.rows-02 .default-widget .pic{width: 340px;padding-top: 0;height: 100%;border-radius: 0 4px 4px 0;}
+.list-view.rows-02 .default-widget{display: flex;height: 100%;background: #FFFFFF;box-shadow: 0 1px 4px 0 rgba(0,0,0,0.25);border-radius: 4px;}
+.list-view.rows-02 .widget-hotel-foot{padding: 15px 20px;margin-top: 0;}
+.list-view.rows-02 .widget-hotel-foot .fav-btn{margin-right: 60px;}
+.list-view.rows-02 .default-widget .widget-hotel-content{flex: 1;}
+.list-view.rows-02 .default-widget .price{font-size: 0;}
+.list-view.rows-02 .widget-hotel-foot .price>span{margin-bottom: 6px;}
+.list-view.rows-02 .hotel-label{position: absolute;bottom: 0;right: 0;/* Rectangle 2: */box-shadow: -3px -1px 4px 0 rgba(0,0,0,0.20);}
