--- a/src/components/agency-details/agency-details.css
+++ b/src/components/agency-details/agency-details.css
@@ -1,7 +1,7 @@
 .agency-details-div { border-top: 2px solid #DBDDE0; border-bottom: 2px solid #DBDDE0; padding: 20px 0; margin-top: 33px; } 
 .agency-details-div>p { font-size: 12px; color: #000000; line-height: 18px; margin-bottom: 10px; } 
 .agency-details-div .agency-details { font-size: 0; } 
-.agency-details-div .agency-details .pic { display: inline-block; vertical-align: top; background: #FFFFFF; border: 1px solid #DCDEE0; border-radius: 2px; width: 88px; height: 66px; text-align: center; } 
+.agency-details-div .agency-details .pic { display: inline-block; vertical-align: top; background: #FFFFFF; border: 1px solid #DCDEE0; border-radius: 2px; width: 88px; height: 66px; text-align: center; display: inline-flex; align-items: center; } 
 .agency-details-div .agency-details .pic img { max-height: 100%; } 
 .agency-details-div .agency-details .details { display: inline-block; vertical-align: top; padding-right: 8px; margin-top: -4px; width: calc(100% - 88px); } 
 .agency-details-div .agency-details .details h4 { font-size: 13px; color: #000000; line-height: 1.3; font-weight: 700; } 
