--- a/src/components/single-item/SingleItem.css
+++ b/src/components/single-item/SingleItem.css
@@ -5,7 +5,7 @@
 
 /* Single Page */
 .single-page {padding: 50px 20px;border-top: 1px solid #DBDDE0;}
-.single-page .item{max-width: 980px;}
+.single-page > .item{max-width: 980px;}
 .single-page .quick-view-items > .item { background-color: #F4F4F4; padding: 35px 40px; max-width: 980px; margin: 0 auto; border-radius: 8px; } 
 .single-page .arrow-switcher { background-color:rgba(0, 0, 0, 0.2); background-image: url('/img/icons/arrow-right-white.png'); background-position: center; border-radius: 4px; width: 80px; position: absolute; height: 335px; top: 115px; background-repeat: no-repeat; background-size: 14px; transition: all .2s; cursor: pointer;} 
 .single-page .arrow-switcher:hover { background-color:rgba(0, 0, 0, 0.8); } 
@@ -29,6 +29,7 @@
 .single-page .trip-data .item+.item { border-top: 2px solid #DBDDE0; margin-top: 30px; padding-top: 20px; } 
 .single-page .trip-data .item p { font-size: 14px; font-weight: 300; line-height: 1.5; } 
 .single-page .trip-data .item p+p { margin-top: 20px; } 
+.single-page .trip-data iframe{width: 100%;height: 230px;margin-top: 30px;}
 .single-page .trip-left-side { width: 331px; } 
 .single-page .extra-logos { display: flex; margin: 20px 0 50px; } 
 .single-page .extra-logos img { margin-left: 10px; } 
