--- a/src/components/title-city/title-city.css
+++ b/src/components/title-city/title-city.css
@@ -1,3 +1,3 @@
 .title-city-div{font-size: 0;margin-bottom: 20px;}
 .title-city-div h2{font-size: 24px;font-weight: 700;line-height: 1.4;}
-.title-city-div p{font-size: 13px;}
+.title-city-div p{font-size: 13px;font-weight: 600;}
