--- a/src/css/base.css
+++ b/src/css/base.css
@@ -186,3 +186,32 @@ span { font-family: 'Cairo', sans-serif; }
  100% { opacity:1; } 
  }
 .left-side { animation-name: ListData; animation-timing-function: ease-in-out; animation-delay: 1.6s; animation-iteration-count: 1; animation-fill-mode:forwards; animation-duration: .6s; opacity: 0; } 
+.ball-clip-rotate div{
+        background-color: red;
+    width: 15px;
+    height: 15px;
+    border-radius: 100%;
+    margin: 2px;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    border: 2px solid red;
+    border-bottom-color: transparent;
+    height: 25px;
+    width: 25px;
+    background: transparent !important;
+    display: inline-block;
+    -webkit-animation: rotate 0.75s 0s linear infinite;
+    animation: rotate 0.75s 0s linear infinite;
+}
+@keyframes rotate {
+  0% {
+    -webkit-transform: rotate(0deg) scale(1);
+            transform: rotate(0deg) scale(1); }
+  50% {
+    -webkit-transform: rotate(180deg) scale(0.6);
+            transform: rotate(180deg) scale(0.6); }
+  100% {
+    -webkit-transform: rotate(360deg) scale(1);
+            transform: rotate(360deg) scale(1); } }
+
+
